View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026594 | Open CASCADE | OCCT:Visualization | public | 2015-08-24 17:01 | 2016-04-20 15:48 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026594: Visualization - AIS_InteractiveContext::MoveTo() should not invalidate the Viewer within immediate mode | ||||
Description | Calling Invalidate() within MoveTo() breaks conception of rendering dynamically highlighted structures in Immediate Mode:if (toUpdateViewer) { if (theToRedrawOnUpdate) { theView->Viewer()->Update(); } else { theView->Viewer()->Invalidate(); } } | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26594 has been created by kgv. SHA-1: 1faf93dc64a165eb28e691aef2e070955feca32a Detailed log of new commits: Author: kgv Date: Mon Aug 24 18:00:04 2015 +0300 0026594: Visualization - AIS_InteractiveContext::MoveTo() should not invalidate the Viewer within immediate mode |
|
Trivial patch is ready for review. |
|
Branch CR26594 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR26594 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. 1faf93dc64a165eb28e691aef2e070955feca32a Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91947325 / 91601368 [+0.38%] Total CPU difference: 17774.189999998944 / 17713.849999998944 [+0.34%] products component : Total MEMORY difference: 25110434 / 25123208 [-0.05%] Total CPU difference: 7052.500000000005 / 7008.090000000001 [+0.63%] Testing on Windows: occt component : Total MEMORY difference: 57064028 / 57056248 [+0.01%] Total CPU difference: 16303.414908399678 / 16696.724629599114 [-2.36%] products component : Total MEMORY difference: 16118043 / 16119994 [-0.01%] Total CPU difference: 5386.636529499987 / 5290.8519154999685 [+1.81%] There are no differences in images found by testdiff. |
|
Branch CR26594 has been deleted by kgv. SHA-1: 1faf93dc64a165eb28e691aef2e070955feca32a |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-24 17:01 | kgv | New Issue | |
2015-08-24 17:01 | kgv | Assigned To | => kgv |
2015-08-24 17:02 | kgv | Assigned To | kgv => vpa |
2015-08-24 17:02 | kgv | Status | new => assigned |
2015-08-24 18:50 | git | Note Added: 0044576 | |
2015-08-24 18:50 | kgv | Note Added: 0044577 | |
2015-08-24 18:50 | kgv | Assigned To | vpa => san |
2015-08-24 18:50 | kgv | Severity | minor => trivial |
2015-08-24 18:50 | kgv | Status | assigned => resolved |
2015-08-24 19:24 |
|
Note Added: 0044578 | |
2015-08-24 19:24 |
|
Assigned To | san => bugmaster |
2015-08-24 19:24 |
|
Status | resolved => reviewed |
2015-08-24 19:39 |
|
Assigned To | bugmaster => mkv |
2015-08-26 12:10 |
|
Note Added: 0044647 | |
2015-08-26 12:10 |
|
Assigned To | mkv => bugmaster |
2015-08-26 12:10 |
|
Status | reviewed => tested |
2015-08-26 12:10 |
|
Test case number | => Not needed |
2015-08-28 11:44 |
|
Changeset attached | => occt master 2eea6525 |
2015-08-28 11:44 |
|
Assigned To | bugmaster => ski |
2015-08-28 11:44 |
|
Status | tested => verified |
2015-08-28 11:44 |
|
Resolution | open => fixed |
2015-10-16 16:24 | git | Note Added: 0046934 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |