0026594: Visualization - AIS_InteractiveContext::MoveTo() should not invalidate the Viewer within immediate mode